--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,12 +53,6 @@
       <ul class="nav navbar-nav">
         <li><a href="/">About</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
         <li>
         <% if ( session.user ) { %>
@@ -73,7 +67,7 @@
               <input  type="password" class="form-control login-password" placeholder="password" name="password">
             </div>
             <input type="hidden" name="_csrf" value="<%= _csrf %>" />
-            <button type="submit" class="login-submit btn btn-default">Submit</button>
+            <button type="submit" class="login-submit btn btn-primary">Login</button>
           </form>
           </li>
           <li>
