commit of changes made in a hosted server, improved ui, fix concurrency errors on mysql adapter

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -11,7 +11,12 @@ body,.graph,.nodes{margin:0}
 div[graph]{
 
   overflow:hidden;
-  .layout, .tips{
+
+    .new-project{
+        background: #A4AACC;
+    }
+
+  .layout, .tips, .new-project{
     position:absolute;
     top:50px;
     bottom:0;
