--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -7,9 +7,16 @@
     
   </head>
   <body ng-app="app" style="margin:0;height:100%">
-    <div ng-controller="data-flow" style="height:100%" class="TransformResults">
+    <div ng-controller="shellProject" style="height:100%" class="TransformResults">
       <div style="height:100%">
         <div graph options="options" class="visual-builder border data-flow"></div>
+      </div>
+    </div>
+    <div class="directory directory-manager" ng-controller="directoryCtrl">
+      <div class="panel">
+        <div ng-repeat="record in directoryContent">
+          <div directoryfile draggable="true" ng-bind="record.name"></div>
+        </div>
       </div>
     </div>
   </body>
@@ -17,17 +24,25 @@
     <script src="/js/sails.io.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="/linker/js/dependencies/angular.min.js"></script>
+    <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
     <script src="/linker/js/dependencies/ui-bootstrap-tpls.min.js"></script>
+
     <script src="/js/ui-layout.min.js"></script>
-    <%if (locals.project){ %>
-      <script src="/js/app.js"></script>
-    <% } else { %>
-      <script src="/js/appDemo.js"></script>
-    <% } %>
+    <script src="/js/app.js"></script>
+
     <script src="/js/directives/graph.js"></script>
+    <script src="/js/directives/directoryFile.js"></script>
     <script src="/js/directives/component.js"></script>
     <script src="/js/directives/connector.js"></script>
     <script src="/js/directives/port.js"></script>
+
+    <%if (locals.project){ %>
+      <script src="/js/controllers/shellProject.js"></script>
+    <% } else { %>
+      <script src="/js/controllers/shellProject_demo.js"></script>
+    <% } %>
+    <script src="/js/controllers/directoryCtrl.js"></script>
+
   
   <script type="text/ng-template" id="myModalContent.html">
     <div class="modal-header">
