--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -1,76 +1,57 @@
-<div class="popupArea">
-      <div class="popup dropdown open">
-        <ul class="dropdown-menu well">
-          <form ng:submit="graph.popupSubmit(popupText)">
-            <div class="input-group input-group-sm"><span class="input-group-addon glyphicon glyphicon-tasks"></span>
-              <input type="text" ng-model="popupText" class="form-control">
-            </div>
-          </form>
-          <li ng-show="comms.length" class="dropdown-header"><b>command component</b></li>
-          <li ng-class="cl" ng-mouseenter="cl = 'active'" ng-mouseleave="cl = ''" 
-              ng-repeat="foo in comms = (implementedCommands | filter:popupText)">
-            <a ng-click="graph.popupSubmit(foo)">{{foo}}</a>
-          </li>
-          <li ng-show="comms2.length && isRootView()" class="dropdown-header"><b>macro component</b></li>
-          <li ng-class="cl" ng-mouseenter="cl = 'active'" ng-mouseleave="cl = ''" 
-              ng-repeat="foo in comms2 = (macroViewList() | filter:popupText)">
-            <a ng-click="graph.popupSubmit(foo)">{{foo}}</a>
-          </li>
-        </ul>
-      </div>
-      <div ng-if="sel.open" class="selectpopup dropdown open"
-           ng-style="{transform:sel.transform, WebkitTransform:sel.transform, MsTransform:sel.transform}">
-        <ul class="dropdown-menu">
-          <li ng-repeat="c in options[sel.data.exec][sel.name]"><a ng-click="graph.selectSelection(c)"><span ng-bind="c"></span></a></li>
-        </ul>
-      </div>
+<% include popupArea.ejs %>
+<% include graphNavbar.ejs %>
+<div class="directory directory-manager" ng-controller="directoryCtrl" ng-if="page == 'directory'">
+  <div class="panel">
+    <div ng-repeat="record in directoryContent">
+      <div directoryfile draggable="true" ng-bind="record.name"></div>
     </div>
-  <% include graphNavbar.ejs %>
-  <% include docs.ejs %>
-    <div ui-layout class="layout">
-      <div class="toplayout">
-        <div class="background">
-          <svg touch-action="none">
-            <g class="edges">
-              <path class="emptyEdge"></path>
-              <path connector ng-repeat="edge in visualData.connections" class="back"></path>
-              <path connector ng-repeat="edge in visualData.connections"></path>
-            </g>
-          </svg>
-          <div touch-action="none" class="workspace">
-            <div class="nodes">
-              <% include Component.ejs %>
-            </div>
-          </div>
+  </div>
+</div>
+
+<div ui-layout class="layout">
+  <div class="toplayout">
+    <div class="background">
+      <svg touch-action="none">
+        <g class="edges">
+          <path class="emptyEdge"></path>
+          <path connector ng-repeat="edge in visualData.connections" class="back"></path>
+          <path connector ng-repeat="edge in visualData.connections"></path>
+        </g>
+      </svg>
+      <div touch-action="none" class="workspace">
+        <div class="nodes">
+          <% include Component.ejs %>
         </div>
       </div>
-      <div ng-show="shell" touch-action="all" class="shell">
-        <div ng-repeat="line in $parent.shellText" ng-class="line.type" ng-bind="line.text"></div>
-      </div>
     </div>
+  </div>
+  <div ng-show="shell" touch-action="all" class="shell">
+    <div ng-repeat="line in $parent.shellText" ng-class="line.type" ng-bind="line.text"></div>
+  </div>
+</div>
 
 
 
-    <div class="new-project" ng-if="page == 'newProject'">
-      <form role="form" class="form-horizontal" ng-submit='findMembers(userToFind)'>
-        <div class="form-group">
-          <label for="name" class="col-sm-2 control-label">Add member</label>
-          <div class="col-sm-10">
-            <input type="text" id="name" ng-model="userToFind" placeholder="email or user name" class="form-control">
-          </div>
-        </div>
-      </form>
-      <div ng-repeat="user in foundUsers">
-        <span class="user-name" ng-bind="user.name"></span>
-        <span class="user-email" ng-bind="user.email"></span>
-        <button class="btn btn-primary" ng-click="selectUser(user)"> Add </button>
+<div class="new-project" ng-if="page == 'newProject'">
+  <form role="form" class="form-horizontal" ng-submit='findMembers(userToFind)'>
+    <div class="form-group">
+      <label for="name" class="col-sm-2 control-label">Add member</label>
+      <div class="col-sm-10">
+        <input type="text" id="name" ng-model="userToFind" placeholder="email or user name" class="form-control">
       </div>
-      <form role="form" class="form-horizontal" ng-submit='$emit("startProject",{command: form.command})'>
-        <div class="form-group">
-          <label for="descr" class="col-sm-2 control-label">Set command</label>
-          <div class="col-sm-10">
-            <input id="descr" rows="3" ng-model="form.command" placeholder="eg: cat hello.txt | grep world" class="form-control"></input>
-          </div>
-        </div>
-      </form>
     </div>
+  </form>
+  <div ng-repeat="user in foundUsers">
+    <span class="user-name" ng-bind="user.name"></span>
+    <span class="user-email" ng-bind="user.email"></span>
+    <button class="btn btn-primary" ng-click="selectUser(user)"> Add </button>
+  </div>
+  <form role="form" class="form-horizontal" ng-submit='$emit("startProject",{command: form.command})'>
+    <div class="form-group">
+      <label for="descr" class="col-sm-2 control-label">Set command</label>
+      <div class="col-sm-10">
+        <input id="descr" rows="3" ng-model="form.command" placeholder="eg: cat hello.txt | grep world" class="form-control"></input>
+      </div>
+    </div>
+  </form>
+</div>
