added passport support, added Docker configuration file to be used on other machines, added tests, added files on test coverage

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
         <% } else { %>
             <form class="navbar-form navbar-left" action="/user/login" method="POST">
             <div class="form-group">
-              <input type="email" class="form-control login-user" placeholder="email" name="email">
+              <input type="email" class="form-control login-user" placeholder="email" name="username">
             </div>
             <div class="form-group">
               <input  type="password" class="form-control login-password" placeholder="password" name="password">
