--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -23,7 +23,7 @@
   
   
   
-  <div ng-switch-when="subgraph">
+  <div ng-switch-when="macro">
     <div title="{{data.macro.description}}" class="title">
       <span ng-bind="data.macro.name"></span>
       <a ng-click="$emit('removeComponent', data.id)" class="close-button glyphicon glyphicon-remove"></a>
