--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -20,6 +20,7 @@
               <li><a href="#" ng-click="viewGraph(rootGraph)">View Root</a></li>
             </ul>
           </li>
+          <li><a href="#" ng-click="page = 'directory'">FileSystem</a></li>
           <li><a href="#" ng-click="shell = true; $emit('compileGraph')">Compile</a></li>
           <li><a href="#" ng-click="shell = true; $emit('runCommand', [])">
             <span class="glyphicon glyphicon-play">&nbsp;</span><span>Run</span>
