--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -16,6 +16,10 @@
     <script src="/bower_components/pointerevents-polyfill/pointerevents.min.js"></script>
     <script src="/js/sails.io.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script>!window.jQuery && document.write(
+    '<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>'
+    )</script>
+
     <script src="/linker/js/dependencies/angular.min.js"></script>
     <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
     <script src="/linker/js/dependencies/ui-bootstrap-tpls.min.js"></script>
