added filesystem, added drag-and-drop download

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -31,6 +31,8 @@
 @import 'bootstrap/bootstrap.less';
 @import 'lib/ui-layout.less';
 @import 'graph.less';
+@import 'component.less';
+@import 'directory.less';
 
 .form-signin{
   width: 30%;
