--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -3,8 +3,17 @@
   *{-webkit-print-color-adjust:exact}
 }
 
-html,body,div[graph]
-  {width:100%;height:100%;margin:0;padding:0}
+html,body{
+    overflow:hidden;
+
+}
+
+html,body,div[graph]{
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0
+}
 .popupArea{
     overflow:auto
 }
@@ -47,10 +56,6 @@ div[graph]{
     left:0;
     width:100%;
     height:100%;
-    -webkit-transform-origin:0 0;
-    -moz-transform-origin:0 0;
-    -o-transform-origin:0 0;
-    -ms-transform-origin:0 0;
     transform-origin:0 0
   }
   
@@ -58,11 +63,6 @@ div[graph]{
     overflow:hidden
   }
   
-  .navbar{
-    position:absolute;
-    top:0;left:0;right:0;height:50px
-  }
-
   .user-icon{
     border:solid 1px #333;margin:5px;padding:2px;font-size:34px
   }
@@ -93,10 +93,6 @@ div[graph]{
     background-color:#333;
     color:#fff;
     font-family:Monospace;
-    -webkit-transition:height linear 0.1s;
-    -moz-transition:height linear 0.1s;
-    -o-transition:height linear 0.1s;
-    -ms-transition:height linear 0.1s;
     transition:height linear 0.1s;
     .call {
         font-weight:bold;
@@ -146,10 +142,6 @@ div[sidebar] {
     left:0;
     bottom:0;
     width:10%;
-    -webkit-transition:all 0.3s linear;
-    -moz-transition:all 0.3s linear;
-    -o-transition:all 0.3s linear;
-    -ms-transition:all 0.3s linear;
     transition:all 0.3s linear;
     background-color:#ddd;
 }
@@ -168,198 +160,4 @@ path.back {
 }
 .input-group-addon {
     color:#000;
-}
-.component,.inline-component {
-    font-size:1em;
-    position:absolute;
-    min-width:80px;
-    min-height:80px;
-    background-color:#fff;
-    -webkit-border-radius:.3em;
-    border-radius:.3em;
-    border:.2em solid #aaa;
-    z-index:auto;
-}
-.component .input-group-addon,.inline-component .input-group-addon,.component .input-group-btn &>.btn,.inline-component .input-group-btn &>.btn,.component .form-control,.inline-component .form-control {
-    height:24px;
-    padding:2px 10px;
-    -webkit-border-radius:0;
-    border-radius:0;
-}
-.component .input-group-addon,.inline-component .input-group-addon {
-    border:initial;
-    background-color:initial;
-    padding-left:2px;
-}
-.component .input-group-addon,.inline-component .input-group-addon,.component .input-group-btn,.inline-component .input-group-btn {
-    width:initial;
-}
-.component .form-control,.inline-component .form-control {
-    float:initial;
-    width:initial;
-}
-.component .title,.inline-component .title {
-    text-align:center;
-    background-color:#ddd;
-    height:1.5em;
-    border-top-left-radius:.1em;
-    border-top-right-radius:.1em;
-}
-.component .title .close-button,.inline-component .title .close-button {
-    float:right;
-    font-size:1.1em;
-    text-decoration:none;
-}
-.component .input,.inline-component .input {
-    float:left;
-}
-.component .output,.inline-component .output {
-    float:right;
-}
-.component .box,.inline-component .box {
-    display:inline-block;
-    margin-top:.2em;
-    height:.7em;
-    width:1em;
-    background-color:#aaa;
-    -webkit-border-radius:.1em;
-    border-radius:.1em;
-}
-.component .box:hover,.inline-component .box:hover {
-    background-color:#00f;
-}
-.component label,.inline-component label {
-    font-weight:normal;
-    margin:0;
-}
-.component input[type="number"],.inline-component input[type="number"] {
-    width:7em;
-}
-body {
-    background-color:#eee;
-    color:#111;
-    font-family:Arial;
-    overflow:visible;
-}
-.asttest {
-    position:relative;
-    background-color:#ddd;
-    border:solid 1px #000;
-    -webkit-border-radius:3px;
-    border-radius:3px;
-    width:100%;
-    table-layout:fixed;
-    .passed {
-        background-color:#86c144;
-    }
-    .failed {
-        background-color:#ac4739;
-        color:#eee;
-    }
-    code {
-        color:inherit;
-        background:none;
-    }
-    .command {
-        td {
-            border-bottom:solid 1px #808080;
-            pre {
-                display:inline-block;
-            }
-        }
-    }
-}
-.asttest .passed,.asttest .failed {
-    font-weight:bold;
-    padding-bottom:.5em;
-}
-.center {
-    text-align:center;
-    p {
-        text-align:center;
-    }
-}
-.tab {
-    list-style:none;
-    padding:10px;
-    background-color:#ccc;
-    display:inline-block;
-    border-top-left-radius:3px;
-    border-top-right-radius:3px;
-    border-top:solid 1px #808080;
-    border-left:solid 1px #808080;
-    border-right:solid 1px #808080;
-}
-.tab:hover,.tab.true {
-    background-color:#ddd;
-}
-.tab.true {
-    position:relative;
-    border-bottom:solid 1px #ddd;
-    border-top:solid 1px #000;
-    border-left:solid 1px #000;
-    border-right:solid 1px #000;
-    z-index:2;
-    margin-bottom:-1px;
-}
-.tab:first-child {
-    margin-left:1%;
-}
-.most {
-    width:30%;
-}
-td.top {
-    vertical-align:top;
-}
-.inline-component {
-    display:inline-block;
-    position:relative;
-    text-align:left;
-}
-p,body &>li {
-    margin-left:3em;
-    margin-right:3em;
-    text-align:justify;
-}
-.border {
-    border:solid 1px #808080;
-}
-pre {
-    white-space:pre-wrap;
-    white-space:-moz-pre-wrap;
-    word-wrap:break-word;
-}
-
-
-/*
-  We're using CSS transitions for when
-  the enter and move events are triggered
-  for the element that has the .repeated-item
-  class
-*/
-.alert.ng-enter, .alert.ng-move, .alert.ng-leave{
-  -webkit-transition:0.5s linear all;
-  -moz-transition:0.5s linear all;
-  -o-transition:0.5s linear all;
-  transition:0.5s linear all;
-  opacity:0;
-}
-
-/*
- The ng-enter-active and ng-move-active
- are where the transition destination properties
- are set so that the animation knows what to
- animate.
-*/
-.alert.ng-enter.ng-enter-active,
-.alert.ng-move.ng-move-active {
-  opacity:1;
-}
-
-.alert.ng-leave{
-   opacity:1;
-}
-
-.alert.ng-leave.ng-leave-active{
-  opacity:0;
 }
