--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -6,74 +6,48 @@
     <link rel="stylesheet" href="/styles/importer.css">
     
   </head>
-  <body ng-app="app" style="margin:0;height:100%">
-    <div ng-controller="shellProject" style="height:100%" class="TransformResults">
-      <div style="height:100%">
-        <div graph options="options" class="visual-builder border data-flow"></div>
-      </div>
+  <body ng-app="app">
+    <div ng-controller="shellProject" style="height:100%">
+      <div graph options="options" class="visual-builder border data-flow"></div>
     </div>
   </body>
     <script src="/bower_components/pointerevents-polyfill/pointerevents.min.js"></script>
     <script src="/js/sails.io.js"></script>
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script>!window.jQuery && document.write(
-    '<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
+    <script>!window.jQuery && document.write('<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
     <!--SCRIPTS-->
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--SCRIPTS END-->
-
-    <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
-
-    <script src="/js/ui-layout.min.js"></script>
+    <!--ANGULAR SCRIPTS-->
     <script src="/js/app.js"></script>
     <script src="/js/services/alerts.js"></script>
-
-    <script src="/js/directives/graph.js"></script>
-    <script src="/js/directives/directoryFile.js"></script>
+    <script src="/js/services/creation-popup.js"></script>
+    <script src="/js/services/csrf.js"></script>
+    <script src="/js/services/filesystem.js"></script>
     <script src="/js/directives/component.js"></script>
     <script src="/js/directives/connector.js"></script>
+    <script src="/js/directives/directoryFile.js"></script>
+    <script src="/js/directives/filesystem.js"></script>
+    <script src="/js/directives/graph.js"></script>
     <script src="/js/directives/port.js"></script>
+    <script src="/js/controllers/directoryCtrl.js"></script>
+    <script src="/js/controllers/graphController.js"></script>
+    <!--ANGULAR SCRIPTS END-->
+
+    <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
+    <script src="/js/ui-layout.min.js"></script>
+
 
     <%if (locals.project){ %>
       <script src="/js/controllers/shellProject.js"></script>
     <% } else { %>
       <script src="/js/controllers/shellProject_demo.js"></script>
     <% } %>
-    <script src="/js/controllers/directoryCtrl.js"></script>
-
   
   <script type="text/ng-template" id="myModalContent.html">
-    <div class="modal-header">
-      <h3>Macro Creation</h3>
-    </div>
-    <div class="modal-body">
-      <form role="form" class="form-horizontal">
-        <div class="form-group">
-          <label for="name" class="col-sm-2 control-label">Name</label>
-          <div class="col-sm-10">
-            <input type="text" id="name" ng-model="form.name" placeholder="Name" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="descr" class="col-sm-2 control-label">Description</label>
-          <div class="col-sm-10">
-            <textarea id="descr" rows="3" ng-model="form.description" class="form-control"></textarea>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="name" class="col-sm-2 control-label">Command</label>
-          <div class="col-sm-10">
-            <input type="text" id="command" ng-model="form.command" placeholder="e.g. cat -A hello.txt | grep &quot;world&quot;" class="form-control">
-          </div>
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button ng-click="ok()" class="btn btn-primary">Create Macro</button>
-      <button ng-click="cancel()" class="btn btn-warning">Cancel</button>
-    </div>
+    <% include ../ng-templates/macroCreationModal %>
   </script>
   <script type="text/ng-template" id="MacroEditModal.html">
     <div class="modal-header">
