added upload files, added upload files by drag-and-drop

--- a/assets/styles/directory.less
+++ b/assets/styles/directory.less
@@ -9,4 +9,14 @@
   .icon-label{
   	word-wrap: break-word;
   }
+  .upload{
+  	background: #3B5972;
+  	position: absolute;
+  	bottom: 1em;
+  	right: 1em;
+  	&:hover{
+  		color: white;
+	  	background: lighten(#3B5972, 13.5%);
+  	}
+  }
 }
