--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -22,17 +22,16 @@
     <!--SCRIPTS END-->
     <!--ANGULAR SCRIPTS-->
     <script src="/js/app.js"></script>
+    <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
     <script src="/js/services/alerts.js"></script>
     <script src="/js/services/creation-popup.js"></script>
     <script src="/js/services/csrf.js"></script>
-    <script src="/js/services/filesystem.js"></script>
     <script src="/js/directives/component.js"></script>
     <script src="/js/directives/connector.js"></script>
     <script src="/js/directives/directoryFile.js"></script>
     <script src="/js/directives/filesystem.js"></script>
     <script src="/js/directives/graph.js"></script>
     <script src="/js/directives/port.js"></script>
-    <script src="/js/controllers/directoryCtrl.js"></script>
     <script src="/js/controllers/graphController.js"></script>
     <!--ANGULAR SCRIPTS END-->
 
