added notifications and progress bar on uploaded files

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -33,6 +33,7 @@
 @import 'graph.less';
 @import 'component.less';
 @import 'directory.less';
+@import 'animations.less';
 
 .form-signin{
   width: 30%;
