fixed dropdown menu not disappearing when being clicked or adding a record on the browser history, added code coverage on the tests, more tests, fixed passport.isAuthenticated always returning false error, improved session management, fixed server errors, occasionaly sending responses with http code 500

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -116,16 +116,15 @@ div[graph]{
     left:0;
     z-index:10;
     white-space:nowrap;
-}
-.popup {
-    & > .dropdown-menu.well {
+    & > .dropdown-menu {
         padding:1px;
         display: block;
     }
-    a {
-        padding-top:0;
-        padding-bottom:0;
-    }
+}
+    
+.popup a {
+    padding-top:0;
+    padding-bottom:0;
 }
 .graph {
     position:fixed;
