--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -20,9 +20,10 @@
     <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--SCRIPTS END-->
+    <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
+
     <!--ANGULAR SCRIPTS-->
     <script src="/js/app.js"></script>
-    <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
     <script src="/js/services/alerts.js"></script>
     <script src="/js/services/creation-popup.js"></script>
     <script src="/js/services/csrf.js"></script>
@@ -31,8 +32,10 @@
     <script src="/js/directives/directoryFile.js"></script>
     <script src="/js/directives/filesystem.js"></script>
     <script src="/js/directives/graph.js"></script>
+    <script src="/js/directives/parameterField.js"></script>
     <script src="/js/directives/port.js"></script>
     <script src="/js/controllers/graphController.js"></script>
+    <script src="/js/controllers/macros.js"></script>
     <!--ANGULAR SCRIPTS END-->
 
     <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
