--- a/assets/styles/directory.less
+++ b/assets/styles/directory.less
@@ -4,19 +4,39 @@
   background-color: #333;
   color: white;
   .icon{
-  	font-size: 4em
+  	font-size: 4em;
+  }
+  .icon-container{
+  	margin: 0;
+  	padding-top: 10px;
+  	padding-bottom: 10px;
   }
   .icon-label{
   	word-wrap: break-word;
   }
-  .upload{
-  	background: #3B5972;
+  .transfer-buttons{
   	position: absolute;
   	bottom: 1em;
   	right: 1em;
+  	text-align: right;
+  }
+  .selected p{
+  	background-color: #555;
+  }
+  .upload{
+  	background: #3B5972;
   	&:hover{
   		color: white;
 	  	background: lighten(#3B5972, 13.5%);
+  	}
+  }
+
+  .download{
+  	background: #32853F;
+ 		color: white;
+  	&:hover{
+  		color: white;
+	  	background: lighten(#32853F, 13.5%);
   	}
   }
 }
