--- a/views/ng-templates/directory.ejs
+++ b/views/ng-templates/directory.ejs
@@ -1,12 +1,16 @@
 <div class="directory directory-manager" filesystem ng-if="filesystem">
   <div class="container-fluid">
     <div class="row-fluid">
-      <div ng-repeat="record in directoryContent" class="col-xs-4 col-sm-3 col-md-2" directoryfile
-      draggable="true">
-        <p class="text-center"><span class="icon glyphicon glyphicon-file"></span></p>
+      <div ng-repeat="record in directoryContent" class="col-xs-4 col-sm-3 col-md-2" directoryfile ng-class="(selectedFile == record) ? 'selected':''"
+      draggable="true" ng-click="selectFile(record)">
+        <p class="icon-container text-center"><span class="icon glyphicon glyphicon-file"></span></p>
         <p class="icon-label text-center" ng-bind="record.name"></p>
       </div>
     </div>
   </div>
-  <div class="upload btn"> Upload File </div>
+  <div class="transfer-buttons">
+      You can also download, and upload files by dragging files from, and to the desktop. &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="{{selectedFile.downloadurl}}" download="{{selectedFile.filename}}" ng-disabled="!selectedFile" class="download btn"> Download File </a>
+      <div class="upload btn"> Upload File </div>
+  </div>
 </div>
