--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -56,7 +56,8 @@ div[graph]{
     left:0;
     width:100%;
     height:100%;
-    transform-origin:0 0
+    transform-origin:0 0;
+    -webkit-transform-origin:0 0;
   }
   
   svg, .workspace{
