--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -21,6 +21,7 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--SCRIPTS END-->
     <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
+    <script src="/bower_components/mousetrap/mousetrap.min.js"></script>
 
     <!--ANGULAR SCRIPTS-->
     <script src="/js/app.js"></script>
