--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -12,7 +12,7 @@
     <tr data-id="<%= user.id %>" data-model="user">
       <td><%= project.name %></td>
       <td><a href="/project/show/<%= project.id %>" class="btn btn-sm btn-primary">Info</a></td>
-      <% if(session.user && session.user.id == user.id){ %>
+      <% if(req.isAuthenticated() && req.user.id == user.id){ %>
       <td><a href="/project/play/<%= project.id %>" class="btn btn-sm btn-primary join-btn">Join</a></td>
       <% } %>
 
